# waydeeper

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  install.sh  pyproject.toml
scripts/: inpaint.py  networks.py
src/: __init__.py  __main__.py  cache.py  cache.rs  cli.py  cli.rs  config.rs  daemon.py  daemon.rs  depth_estimator.py  depth_estimator.rs  egl_bridge.c  inpaint.rs  ipc.py  ipc.rs  main.rs  math.rs  mesh.rs  models.py  models.rs  renderer.py  renderer.rs  wayland.rs
